Add get chat room by id API
