# docs/swagger/index.json
@@ -895,6 +895,79 @@
       }
     },
     "/chat-room/{chatRoomId}": {
+      "get": {
+        "summary": "Get chat room",
+        "tags": [
+          "Chatroom"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "chatRoomId",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Get chat room sucessful",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "chatRoomId": {
+                      "type": "string"
+                    },
+                    "chatRoomName": {
+                      "type": "string"
+                    },
+                    "chatRoomAvatar": {
+                      "type": "string"
+                    },
+                    "members": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/paths/~1user~1%7Bid%7D/get/responses/200/content/application~1json/schema"
+                      }
+                    },
+                    "admin": {
+                      "type": "array",
+                      "items": {
+                        "description": "User id",
+                        "type": "string"
+                      }
+                    },
+                    "type": {
+                      "type": "string",
+                      "enum": [
+                        "personal",
+                        "group"
+                      ]
+                    },
+                    "latestMessage": {
+                      "$ref": "#/paths/~1message~1chat-room~1%7BchatRoomId%7D/get/responses/200/content/application~1json/schema/items"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Chat room not found"
+          }
+        }
+      },
       "put": {
         "summary": "Update chat room",
         "tags": [
